feat: add exception to jblobresult on failure